--- a/src/Components/style/AdminHome.css
+++ b/src/Components/style/AdminHome.css
@@ -23,12 +23,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: flex-start; */
-    align-items: flex-end;
+    align-items: center;
+    width: 100%;
 }
 
-label{
-    padding-right: 80px;
+.label-class{
+    /* padding-right: 80px; */
 }
 
 .heading1{
@@ -55,4 +55,33 @@ label{
     border-radius: 10px;
     padding: 20px;
     width: 50%;   
+}
+
+.upper-label-div{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.label-div{
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+button{
+    font-size: 15px;
+    padding: 8px;
+}
+
+
+.table-div{
+    /* sx={{ width: "100%", display: "flex", flexDirection: "column", alignContent: "center" }} */
+    /* width: 100%;
+    display: flex;
+    flex-direction: column; */
+    /* font-size: 50px; */
 }
