--- a/src/Components/style/UserHome.css
+++ b/src/Components/style/UserHome.css
@@ -19,28 +19,29 @@
     width: 50%;
 }
 
-.search-div{
+.search-div-user{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    padding: 20px;
+    width: 100%;
 }
 
-label{
-    padding-right: 80px;
+label-user{
+    padding: 10px;
 }
 
-.heading1{
-    font-size: 20px;
+.heading-main{
+    font-size: 24px;
     font-weight: 600;
     padding: 20px;
-    padding-bottom: 20px;
 }
 
-.heading2{
-    font-size: 10px;
+.heading-sub{
+    font-size: 14px;
     font-weight: 300;
-    padding: 10px;
+    padding: 20px;
     padding-top: 0px;
 }
 
